--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -21,11 +21,11 @@ a {
 
 /* Buttons */
 .btn {
-  @apply bg-indigo-600 text-white border-2 border-indigo-600 py-3 px-6 rounded;
+  @apply bg-indigo-600 text-white border-2 border-indigo-600 py-3 px-6 rounded cursor-pointer;
 }
 
 .btn-outline {
-  @apply bg-white text-indigo-600;
+  @apply bg-transparent text-indigo-600;
 }
 
 .btn-outline:hover {
@@ -33,7 +33,7 @@ a {
 }
 
 .btn-danger {
-  @apply bg-white border-red-400 text-red-400;
+  @apply bg-transparent border-red-400 text-red-400;
 }
 
 .btn-danger:hover {
