adding search with Ransack and TurboFrames + Heroicons

--- a/app/views/application/_flash_messages.html.erb
+++ b/app/views/application/_flash_messages.html.erb
@@ -1,5 +1,6 @@
 <% flash.each do |key, msg| %>
-  <div class="px-8 py-4 bg-amber-100">
+  <div class="flex items-center justify-between px-8 py-4 bg-amber-100">
     <%= msg %>
+    <button onclick="closeFlashAlert()"><%= heroicon "x-mark" %></button>
   </div>
 <% end %>
