--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -44,6 +44,11 @@ a {
   @apply bg-red-400 text-white;
 }
 
+.btn svg {
+  display: inline;
+  vertical-align: text-top;
+}
+
 /* Forms */
 input:not([type="checkbox"]):not([type="radio"]):not([type="submit"]), textarea {
   @apply mt-2 mb-4 block rounded focus:border-indigo-600 focus:ring focus:ring-indigo-300 focus:ring-opacity-50;
