--- a/app/views/errors/_error_page.html.erb
+++ b/app/views/errors/_error_page.html.erb
@@ -1,7 +1,7 @@
 <div class="text-center">
-  <h1 class="mt-8"><%= code %></h1>
+  <h1 class="mt-8 text-8xl"><%= code %></h1>
 
-  <h2><%= error_title %></h2>
+  <h2 class="text-4xl"><%= error_title %></h2>
   <p><%= error_description %></p>
 
   <p class="my-8">
