--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -1,5 +1,5 @@
 <nav class="bg-gray-800">
-  <div class="mx-auto px-4 sm:px-6 lg:px-8">
+  <div class="mx-auto px-6 md:px-12">
     <div class="flex h-16 items-center justify-between">
       <div class="flex items-center">
         <div class="flex-shrink-0">
