--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <%= render "application/header" %>
     <%= render 'application/flash_messages' %>
     <main>
-      <div class="mx-auto p-4 md:p-8">
+      <div class="mx-auto p-6 md:px-12">
         <%= yield %>
       </div>
     </main>
