run seeds in setup + minor UI tweaks

--- a/app/views/application/_header.html.erb
+++ b/app/views/application/_header.html.erb
@@ -38,7 +38,7 @@
       <a href="<%= root_path %>" class="<%= nav_link_class("home", "block") %>">Home</a>
       <a href="<%= articles_path %>" class="<%= nav_link_class("articles", "block") %>">Articles</a>
       <% unless user_signed_in? %>
-        <a href="<%= articles_path %>" class="<%= nav_link_class(nil, "block") %>">Sign in</a>
+        <a href="<%= new_user_session_path %>" class="<%= nav_link_class(nil, "block") %>">Sign in</a>
       <% end %>
     </div>
     <% if user_signed_in? %>
