--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,5 +1,18 @@
 <h1>About us</h1>
 
 <p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+
+<h2>Mission</h2>
+
+<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+
+<h2>Values</h2>
+
+<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+
+<h2>Team</h2>
+
 <p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
 <p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
