--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -41,6 +41,10 @@ table th, table td {
   @apply py-4 px-6;
 }
 
+table td img {
+  min-width: 30px;
+}
+
 /* Buttons */
 .btn {
   @apply bg-indigo-600 text-white border-2 border-indigo-600 py-3 px-6 rounded cursor-pointer outline-none;
