--- a/app/views/application/_remote_modal.html.erb
+++ b/app/views/application/_remote_modal.html.erb
@@ -4,7 +4,7 @@
       <header class="flex items-center justify-between">
         <h1 class="modal-title"></h1>
         <button class="outline-none" data-micromodal-close>
-          <%= heroicon "x-mark" %>
+          <%= heroicon "x-mark", options: { class: "w-8 h-8" } %>
         </button>
       </header>
       <main class="my-2">
