add cards.css component

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,5 +10,6 @@
 @import 'components/tables.css';
 @import 'components/buttons.css';
 @import 'components/forms.css';
+@import 'components/cards.css';
 @import 'components/pagination.css';
 @import 'components/overrides.css';
