--- a/app/views/errors/_error_page.html.erb
+++ b/app/views/errors/_error_page.html.erb
@@ -4,7 +4,7 @@
   <h2 class="text-4xl"><%= error_title %></h2>
   <p><%= error_description %></p>
 
-  <p class="my-8">
+  <p class="my-8 space-x-2">
     <a href="<%= root_path %>" class="btn">Home</a>
     <a href="javascript:history.back()" class="btn btn-outline">Back</a>
   </p>
