--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,13 +1,15 @@
-<h1><%= @article.title %></h1>
+<div class="card my-4">
+  <h1 class="card-title"><%= @article.title %></h1>
 
-<p class="text-sm text-slate-400">
-  <%= author_and_date(@article) %>
-</p>
+  <p class="card-subtitle">
+    <%= author_and_date(@article) %>
+  </p>
 
-<div class="my-6">
-  <%= @article.body %>
-</div>
+  <div class="card-body">
+    <%= @article.body %>
+  </div>
 
-<div class="form-actions">
-  <%= link_to "Edit", edit_article_path(@article), class: 'btn' %>
+  <div class="card-actions">
+    <%= link_to "Edit", edit_article_path(@article), class: 'btn' %>
+  </div>
 </div>
