--- a/app/views/errors/_error_page.html.erb
+++ b/app/views/errors/_error_page.html.erb
@@ -1,8 +1,8 @@
 <div class="text-center">
   <h1 class="mt-8 text-8xl"><%= code %></h1>
 
-  <h2 class="text-4xl"><%= error_title %></h2>
-  <p><%= error_description %></p>
+  <h2><%= error_title %></h2>
+  <div class="max-w-lg mx-auto"><%= error_description %></div>
 
   <p class="my-8 space-x-2">
     <a href="<%= root_path %>" class="btn">Home</a>
