--- a/app/views/pages/terms.html.erb
+++ b/app/views/pages/terms.html.erb
@@ -1,5 +1,5 @@
 <h1>Terms</h1>
 
-<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
-<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
-<p class="mb-4"><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+<p><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+<p><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
+<p><%= Faker::Lorem.paragraphs(number: 5).join.html_safe %></p>
