--- a/app/assets/stylesheets/components/forms.css
+++ b/app/assets/stylesheets/components/forms.css
@@ -1,7 +1,5 @@
 input:not([type="checkbox"]):not([type="radio"]):not([type="submit"]), textarea {
-  @apply mt-2 mb-4 block rounded focus:border-indigo-600 focus:ring focus:ring-indigo-300 focus:ring-opacity-50;
-  width: 100%;
-  max-width: 500px;
+  @apply w-full max-w-lg mt-2 mb-4 block rounded focus:border-indigo-600 focus:ring focus:ring-indigo-300 focus:ring-opacity-50;
 }
 
 .form-actions {
