--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Users</h1>
 
-<div class="mt-8 overflow-x-auto relative">
+<div class="table-responsive mt-8">
   <table>
     <thead>
       <tr>
