upgrade Turbo to 7.2.0 + add missing constraints in Gemfile + minor UI tweaks

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
   </p>
 
   <div class="card-body">
-    <%= @article.body %>
+    <%= simple_format @article.body %>
   </div>
 
   <div class="card-actions">
