--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<img class="rounded-full mx-auto" src="<%= avatar_url(@user.email, 150) %>">
+<img class="rounded-full mx-auto" src="<%= avatar_url(@user.email, 200) %>">
 
 <div class="my-4 text-center">
   <p class="text-2xl"><%= @user.name %></p>
@@ -9,12 +9,12 @@
   <p>
     <b>Created at</b>
     <%= time_ago @user.created_at %>
-    <span class="text-xs text-slate-500"><%= @user.created_at.strftime('%Y-%m-%d %H:%M') %></span>
+    <span class="text-xs text-slate-500"><%= format_time @user.created_at %></span>
   </p>
   <p>
     <b>Updated at</b>
     <%= time_ago @user.updated_at %>
-    <span class="text-xs text-slate-500"><%= @user.updated_at.strftime('%Y-%m-%d %H:%M') %></span>
+    <span class="text-xs text-slate-500"><%= format_time @user.updated_at %></span>
   </p>
-  <p><b>Articles</b> <%= @user.articles.size %></p>
+  <p><b>Total Articles</b> <%= @user.articles.size %></p>
 </div>
