--- a/app/assets/stylesheets/components/forms.css
+++ b/app/assets/stylesheets/components/forms.css
@@ -2,6 +2,10 @@ input:not([type="checkbox"]):not([type="radio"]):not([type="submit"]), textarea 
   @apply w-full max-w-lg mt-2 mb-4 block rounded focus:border-indigo-600 focus:ring focus:ring-indigo-300 focus:ring-opacity-50;
 }
 
+input[type="file"] {
+  @apply text-slate-400 bg-white border border-gray-500 cursor-pointer focus:outline-none file:mr-4 file:py-2 file:px-4 file:border-0 file:bg-gray-500 file:text-white hover:file:bg-gray-600;
+}
+
 .form-actions {
   @apply flex gap-4 my-4;
 }
