--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,16 @@
 <h1>My account</h1>
 
-<div class="mb-4">
-  <%= image_tag avatar_url(current_user.email, 150), class: "rounded-full" %>
-</div>
-
 <%= form_with(model: current_user) do |form| %>
   <%= render "application/error_messages", object: current_user %>
+
+  <div class="mb-4">
+    <%= avatar(current_user, 200) %>
+  </div>
+
+  <div>
+    <%= form.label :avatar %>
+    <%= form.file_field :avatar, accept: "image/*" %>
+  </div>
 
   <div>
     <%= form.label :name %>
