[fix] close <div> properly

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -30,7 +30,7 @@
         </div>
         <div class="card-actions">
           <%= link_to 'Read more', article, class: 'btn btn-outline' %>
-        </p>
+        </div>
       </article>
     <% end %>
   </div>
