--- a/app/views/errors/_error_page.html.erb
+++ b/app/views/errors/_error_page.html.erb
@@ -6,6 +6,6 @@
 
   <p class="my-8 space-x-2">
     <a href="<%= root_path %>" class="btn">Home</a>
-    <a href="javascript:history.back()" class="btn btn-outline">Back</a>
+    <a href="#" onclick="back()" class="btn btn-outline">Back</a>
   </p>
 </div>
