--- a/app/assets/stylesheets/components/buttons.css
+++ b/app/assets/stylesheets/components/buttons.css
@@ -18,36 +18,17 @@
   @apply bg-red-600 text-white;
 }
 
+.btn-github {
+  background-color: #333;
+  border-color: #333;
+}
+
+.btn-google {
+  background-color: #ea4335;
+  border-color: #ea4335;
+}
+
 .btn svg {
   display: inline;
   vertical-align: text-top;
-}
-
-.social-signin-btn {
-  display: inline-flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 10px 20px;
-  font-size: 12px;
-  font-weight: 500;
-  text-transform: uppercase;
-  color: #fff;
-  border-radius: 5px;
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
-  transition: all 0.15s ease-in-out;
-}
-
-.social-signin-link:hover,
-.social-signin-link:focus,
-.social-signin-link:active {
-  box-shadow: 0 3px 4px rgba(0, 0, 0, 0.5);
-  outline: none;
-}
-
-.social-signin-btn__github {
-  background-color: #333;
-}
-
-.social-signin-btn__google {
-  background-color: #ea4335;
 }
