action teext added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -3,6 +3,8 @@
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
 @import 'tippy.js/dist/tippy.css';
+@import "trix/dist/trix";
+@import './actiontext.css';
 
 /* Components */
 @import 'components/base.css';
