--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -8,7 +8,7 @@
 
   <div>
     <%= form.label :body %>
-    <%= form.text_area :body, rows: 10 %>
+    <%= form.rich_text_area :body %>
   </div>
 
   <div class="mt-4">
