--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -6,7 +6,7 @@
   </p>
 
   <div class="card-body">
-    <%= simple_format @article.body %>
+    <%= @article.body %>
   </div>
 
   <div class="card-actions">
