--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -26,7 +26,7 @@
           <%= author_and_date(article) %>
         </p>
         <div class="card-body">
-          <%= truncate article.body, length: 160 %>
+          <%= truncate strip_tags(article.body.to_s), length: 160 %>
         </div>
         <div class="card-actions">
           <%= link_to 'Read more', article, class: 'btn btn-outline' %>
