--- a/app/assets/stylesheets/components/forms.css
+++ b/app/assets/stylesheets/components/forms.css
@@ -9,3 +9,7 @@ input[type="file"] {
 .form-actions {
   @apply flex gap-4 my-4;
 }
+
+trix-editor {
+  @apply bg-white border-gray-500 focus:border-indigo-600 focus:ring focus:ring-indigo-300 focus:ring-opacity-50;
+}
