--- a/app/assets/stylesheets/components/overrides.css
+++ b/app/assets/stylesheets/components/overrides.css
@@ -7,3 +7,8 @@
 .tippy-box {
   @apply bg-gray-800;
 }
+
+/* Trix */
+trix-editor {
+  @apply bg-white border-gray-500 focus:border-indigo-600 focus:ring focus:ring-indigo-300 focus:ring-opacity-50;
+}
