--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,16 @@
     <span class="text-indigo-600">Rails + Ralix + Tailwind</span>
   </h1>
 
-  <p class="mt-5 mb-10 text-gray-500 sm:text-lg md:text-xl">Starter Kit to build Rails applications fast, with Ralix, Tailwind and more!</p>
+  <p class="mt-5 mb-10 text-gray-500 sm:text-lg md:text-xl">
+    Starter Kit to build Rails applications fast, with Ralix, Tailwind and more!
+  </p>
 
-  <a href="https://github.com/ralixjs/rails-ralix-tailwind" class="btn">Get started</a>
-  <a href="<%= articles_path %>" class="btn btn-outline ml-4">Explore app</a>
+  <a href="https://github.com/ralixjs/rails-ralix-tailwind" class="btn" target="_blank">
+    <%= heroicon 'book-open' %>
+    Get started
+  </a>
+  <a href="<%= articles_path %>" class="btn btn-outline ml-4">
+    <%= heroicon 'squares-2x2' %>
+    Explore app
+  </a>
 </div>
