Make Ransack work with Action Text

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -11,7 +11,7 @@
     <div class="flex absolute inset-y-0 left-0 items-center pl-3 pointer-events-none">
       <%= heroicon "magnifying-glass" %>
     </div>
-    <%= f.text_field :title_or_body_cont, class: "search-input p-3 pl-10 text-sm", onkeyup: "search()", placeholder: "Search ..." %>
+    <%= f.text_field :title_or_rich_text_body_cont, class: "search-input p-3 pl-10 text-sm", onkeyup: "search()", placeholder: "Search ..." %>
   </div>
 <% end %>
 
