--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -6,10 +6,10 @@
 
 /* Components */
 @import './components/base.css' layer(utilities);
-@import './components/modals.css' layer(utilities);
-@import './components/tables.css' layer(utilities);
-@import './components/buttons.css' layer(utilities);
-@import './components/forms.css' layer(utilities);
-@import './components/cards.css' layer(utilities);
-@import './components/pagination.css' layer(utilities);
-@import './components/overrides.css' layer(utilities);
+@import './components/forms.css';
+@import './components/tables.css';
+@import './components/modals.css';
+@import './components/buttons.css';
+@import './components/cards.css';
+@import './components/pagination.css';
+@import './components/overrides.css';
